--- a/mikrotik-username-password-hotspot-generator.html
+++ b/mikrotik-username-password-hotspot-generator.html
@@ -185,7 +185,7 @@
           <br>
           <button style="margin-top:0px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button>
           <button type="button" value="Open window" onclick="printvoucher()">Print Voucher</button>
-          <span style="margin-bottom:15px; margin-top:0px;padding-left:7px; font-weight:600; font-size:14px" class="d-link"> [ <a class="download" href="#" download="user.rsc">save user.rsc</a> ]</span><br>
+          <span style="margin-bottom:15px; margin-top:0px;padding-left:7px; font-weight:600; font-size:14px" class="d-link"> [ <a class="download" href="#" download="user-pass-hotspot.rsc">user-pass-hotspot.rsc</a> ]</span><br>
         </div>
       </div>
       <div class="footer">
