--- a/mikrotik-username-password-ppp-generator.html
+++ b/mikrotik-username-password-ppp-generator.html
@@ -153,14 +153,14 @@
               <option value="sstp">sstp</option>
             </select>
             <label>Quantity User PPP</label>
-            <input type="text" id="input-gty-ppp" value="50" placeholder="256 only recomended">
+            <input type="text" id="input-gty-ppp" value="20" placeholder="256 only recomended">
             <label>PPP Profile Name</label>
             <input type="text" id="input-profile-ppp" value="default" placeholder="default">
             <label>Local Address (server)</label>
             <input type="text" id="input-local-address" value="172.16.16.1" placeholder="local address / server">			
             <label>Rate Limit [up/down]</label>
             <input type="text" id="input-rate-limit" value="1M/2M" placeholder="1M/2M can use burst limit">
-            <label>First Remote Address</label>
+            <label>Start IP Remote Address</label>
             <input type="text" id="input-remote-address" value="10" placeholder="10">
             <label >Type Username</label>
             <input type="text" id="input-type-user" value="client-" placeholder="type user ppp name">
