--- a/mikrotik-username-password-ppp-generator.html
+++ b/mikrotik-username-password-ppp-generator.html
@@ -34,11 +34,11 @@
       *{box-sizing:border-box}
       .logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
       .logo a{color:#ddd!important;text-decoration:none!important}
-      #wrap{max-width:750px;margin:0 auto;padding:0 5px}
+      #wrap{max-width:800px;margin:0 auto;padding:0 5px}
       .header{height:auto;width:100%;margin-top:0px;margin-bottom:0px;border-top:0px solid #555}
       .main-wrap{display:flex}
-      .content{flex:1;width:70%;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;border-radius:0 5px 5px 0}
-      .sidebar{width:30%;background-color:#ddd;border:1px solid #bbb;height:auto;border-radius:5px 0 0 5px;padding:15px}
+      .content{flex:1;width:65%;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;border-radius:0 5px 5px 0}
+      .sidebar{width:35%;background-color:#ddd;border:1px solid #bbb;height:auto;border-radius:5px 0 0 5px;padding:15px}
       .footer{font-size:13px;padding-top:10px;padding-bottom:15px;text-align:left;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
       h1{color:#ddd;font-size:22px;margin-bottom:5px;margin-top:10px}
@@ -160,7 +160,7 @@
             <input type="text" id="input-local-address" value="172.16.16.1" placeholder="local address / server">			
             <label>Rate Limit [up/down]</label>
             <input type="text" id="input-rate-limit" value="2M/3M" placeholder="2M/3M can use burst limit">
-            <label>Start IP Remote Address</label>
+            <label>First IP Remote Address (clint)</label>
             <input type="text" id="input-remote-address" value="10" placeholder="10">
             <label >Type Username</label>
             <input type="text" id="input-type-user" value="client-" placeholder="type user ppp name">
