--- a/mikrotik-username-password-ppp-generator.html
+++ b/mikrotik-username-password-ppp-generator.html
@@ -163,7 +163,7 @@
             <label>First IP Address (client)</label>
             <input type="text" id="input-remote-address" value="10" placeholder="10">
             <label >Type Username</label>
-            <input type="text" id="input-type-user" value="client-" placeholder="type user ppp name">
+            <input type="text" id="input-type-user" value="client@" placeholder="type user ppp name">
             <label>Type Password</label>
             <select id="input-type-password">
               <option value="pass1">Password = Username</option>
