--- a/mikrotik-username-password-ppp-generator.html
+++ b/mikrotik-username-password-ppp-generator.html
@@ -142,7 +142,7 @@
       <div class="main-wrap">
         <div class="sidebar">
           <div style="margin-bottom:10px; height:auto">
-            <label>PPP Service</label>
+            <label>PPP Service Options</label>
             <select id="input-ppp-service">
               <option value="any">any</option>
               <option value="async">async</option>
@@ -156,11 +156,11 @@
             <input type="text" id="input-gty-ppp" value="20" placeholder="256 only recomended">
             <label>PPP Profile Name</label>
             <input type="text" id="input-profile-ppp" value="default" placeholder="default">
-            <label>Local Address (server)</label>
+            <label>Local Address [server]</label>
             <input type="text" id="input-local-address" value="172.16.16.1" placeholder="local address / server">			
-            <label>Rate Limit [up/down]</label>
+            <label>Rate Limit [up/down] </label>
             <input type="text" id="input-rate-limit" value="2M/3M" placeholder="2M/3M can use burst limit">
-            <label>First IP Address (client)</label>
+            <label>Client Address Start IP From</label>
             <input type="text" id="input-remote-address" value="10" placeholder="10">
             <label >Type Username</label>
             <input type="text" id="input-type-user" value="client@" placeholder="type user ppp name">
