--- a/mikrotik-username-password-ppp-generator.html
+++ b/mikrotik-username-password-ppp-generator.html
@@ -160,7 +160,7 @@
             <input type="text" id="input-local-address" value="172.16.16.1" placeholder="local address / server">			
             <label>Rate Limit [up/down] </label>
             <input type="text" id="input-rate-limit" value="2M/3M" placeholder="2M/3M can use burst limit">
-            <label>Client Address Start IP From</label>
+            <label>First IP Address [client]</label>
             <input type="text" id="input-remote-address" value="10" placeholder="10">
             <label >Type Username</label>
             <input type="text" id="input-type-user" value="client@" placeholder="type user ppp name">
