--- a/mikrotik-username-password-ppp-generator.html
+++ b/mikrotik-username-password-ppp-generator.html
@@ -160,7 +160,7 @@
             <input type="text" id="input-rate-limit" value="2M/3M" placeholder="2M/3M can use burst limit">			
             <label>Local Server IP Address</label>
             <input type="text" id="input-local-address" value="172.16.16.1" placeholder="local address / server">			
-            <label>Start Client IP Address from</label>
+            <label>Client IP Address Start from</label>
             <input type="text" id="input-remote-address" value="10" placeholder="10">
             <label >Type Username</label>
             <input type="text" id="input-type-user" value="client@" placeholder="type user ppp name">
