--- a/mikrotik-username-password-ppp-generator.html
+++ b/mikrotik-username-password-ppp-generator.html
@@ -175,8 +175,7 @@
             </select>
             <div style="clear: both;"></div>
           </div>
-          <button style="margin-top:0px;" type="button" onclick="myFunctionInput()">Generate</button>
-          <div style="clear: both;"></div>
+          <button style="margin-bottom:5px;" type="button" onclick="myFunctionInput()">Generate</button>
         </div>
         <div class="content">
           <span style="margin-left:2px;font-weight:600">Copy-Paste to Terminal.</span>
