--- a/mikrotik-username-password-ppp-generator.html
+++ b/mikrotik-username-password-ppp-generator.html
@@ -144,13 +144,13 @@
           <div style="margin-bottom:10px; height:auto">
             <label>PPP Service Options</label>
             <select id="input-ppp-service">
-              <option value="any">any</option>
-              <option value="async">async</option>
-              <option value="l2tp">l2tp</option>
-              <option value="ovpn">ovpn</option>
-              <option value="pppoe">pppoe</option>
-              <option value="pptp">pptp</option>
-              <option value="sstp">sstp</option>
+              <option value="any">ANY (default)</option>
+              <option value="pppoe">PPPOE</option>			  
+              <option value="async">ASYNC</option>
+              <option value="l2tp">L2TP</option>
+              <option value="ovpn">OVPN</option>
+              <option value="pptp">PPTP</option>
+              <option value="sstp">SSTP</option>
             </select>
             <label>Quantity User PPP</label>
             <input type="text" id="input-gty-ppp" value="20" placeholder="256 only recomended">
