--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -170,12 +170,12 @@
               <input onkeydown="upperCaseF(this)" type="text" id="up-interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeypress="return event.charCode != 32" onkeyup="myFunction()">
             </div>
             <div style="margin-top:14px; font-size:12px; border:1px solid orange; background-color:#F5D76E; padding:5px;font-weight:bold; border-radius:5px">
-              <span style="font-weight:bold">Actual Burst Time Duration:</span>
+              <span style="font-weight:bold; font-size:13px">Actual Burst Time Duration:</span>
               <div style="clear:both; margin-top:5px">
-                ( <span id="for-up-burst-threshold" style='color: #191970'>384K</span> * <span id="for-up-burst-time" style='color: DarkViolet'>16s</span> ) / <span id="for-up-burst-limit" style='color: #01A3DF'>1M</span> = <span id="for-up-burst-duration" style='color: Crimson'>6</span>s<br>
+                ( <span id="for-up-burst-threshold" style='color: #191970'>384K</span> * <span id="for-up-burst-time" style='color: DarkViolet'>16s</span> ) / <span id="for-up-burst-limit" style='color: #01A3DF'>1M</span> = <span id="for-up-burst-duration" style='color: Crimson'>6</span> sec.<br>
               </div>
-              <div style='font-size:12px; font-weight:bold;margin-top:5px'>
-                <span style='color: green;' id="new-burst-up">512K</span> to <span id="for-up-burst-limit2" style='color: #01A3DF'>1M</span> for <span id="for-up-burst-duration2" style='color: Crimson'>6</span> seconds<br>
+              <div style='font-size:12px; margin-top:5px; padding-top:5px; border-top:1px solid #292929'>
+                Burst <span style='color: green;' id="new-burst-up">512K</span> to <span id="for-up-burst-limit2" style='color: #01A3DF'>1M</span> for <span id="for-up-burst-duration2" style='color: Crimson'>6</span> sec.<br>
               </div>
             </div>
           </div>
@@ -196,12 +196,12 @@
               <input onkeydown="upperCaseF(this)" type="text" id="down-interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeypress="return event.charCode != 32" onkeyup="myFunction()">
             </div>
             <div style="margin-top:14px; font-size:12px; border:1px solid orange; background-color:#F5D76E; padding:5px;font-weight:bold; border-radius:5px">
-              Actual Burst Time Duration:
+              <span style="font-weight:bold; font-size:13px">Actual Burst Time Duration:</span>
               <div style="clear:both; margin-top:5px">
-                ( <span id="for-down-burst-threshold" style='color: #191970'>750K</span> * <span id="for-down-burst-time" style='color: DarkViolet'>16s</span> ) / <span id="for-down-burst-limit" style='color: #01A3DF'>2M</span> = <span id="for-down-burst-duration" style='color: Crimson'>6</span>s<br>
+                ( <span id="for-down-burst-threshold" style='color: #191970'>750K</span> * <span id="for-down-burst-time" style='color: DarkViolet'>16s</span> ) / <span id="for-down-burst-limit" style='color: #01A3DF'>2M</span> = <span id="for-down-burst-duration" style='color: Crimson'>6</span> sec.<br>
               </div>
-              <div style='font-size:12px; margin-top:5px;'>
-                <span style='color:green;' id="new-burst-down">1M</span> to <span id="for-down-burst-limit2" style='color: #01A3DF'>2M</span> for <span id="for-down-burst-duration2" style='color: Crimson'>6</span> seconds<br>
+              <div style='font-size:12px; margin-top:5px; padding-top:5px; border-top:1px solid #292929'>
+                Burst <span style='color:green;' id="new-burst-down">1M</span> to <span id="for-down-burst-limit2" style='color: #01A3DF'>2M</span> for <span id="for-down-burst-duration2" style='color: Crimson'>6</span> sec.<br>
               </div>
             </div>
           </div>
