--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -170,7 +170,7 @@
               <input onkeydown="upperCaseF(this)" type="text" id="up-interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeypress="return event.charCode != 32" onkeyup="myFunction()">
             </div>
             <div style="margin-top:14px; font-size:12px; border:1px solid orange; background-color:#F5D76E; padding:5px;font-weight:bold; border-radius:5px">
-              <span style="font-weight:bold; font-size:13px">Actual Burst Time Duration:</span>
+              Actual Burst Time Duration:
               <div style="clear:both; margin-top:5px">
                 ( <span id="for-up-burst-threshold" style='color: #191970'>384K</span> * <span id="for-up-burst-time" style='color: DarkViolet'>16s</span> ) / <span id="for-up-burst-limit" style='color: #01A3DF'>1M</span> = <span id="for-up-burst-duration" style='color: Crimson'>6</span> sec.<br>
               </div>
@@ -196,7 +196,7 @@
               <input onkeydown="upperCaseF(this)" type="text" id="down-interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeypress="return event.charCode != 32" onkeyup="myFunction()">
             </div>
             <div style="margin-top:14px; font-size:12px; border:1px solid orange; background-color:#F5D76E; padding:5px;font-weight:bold; border-radius:5px">
-              <span style="font-weight:bold; font-size:13px">Actual Burst Time Duration:</span>
+              Actual Burst Time Duration:
               <div style="clear:both; margin-top:5px">
                 ( <span id="for-down-burst-threshold" style='color: #191970'>750K</span> * <span id="for-down-burst-time" style='color: DarkViolet'>16s</span> ) / <span id="for-down-burst-limit" style='color: #01A3DF'>2M</span> = <span id="for-down-burst-duration" style='color: Crimson'>6</span> sec.<br>
               </div>
