--- a/mikrotik-username-password-ppp-generator.html
+++ b/mikrotik-username-password-ppp-generator.html
@@ -55,7 +55,7 @@
       input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right;border-radius:5px}
       input[type=submit]:hover{background-color:#45a049}
       .list-output-content{height:518px;background:#fff;overflow:scroll;width:100%;padding:10px;margin-top:8px;border:1px solid #ccc;border-radius:5px;white-space:nowrap}
- 	  .d-link {visibility:hidden}  
+ 	  .d-link {visibility:hidden} 	  
       .mikrotik-logo{display:none}
       @media screen and (max-width:650px) {
       .list-output-content{height:auto}
@@ -194,7 +194,7 @@
           </div>
           <br>
           <button style="margin-top:0px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button>
-          <span style="margin-bottom:15px; margin-top:0px;padding-left:7px; font-weight:600; font-size:14px" class="d-link"> [ <a class="download" href="#" download="user-pass-ppp.rsc">user-pass-ppp.rsc</a> ]</span><br>
+          <span style="margin-bottom:15px; margin-top:0px;padding-left:7px; font-weight:600; font-size:14px" id="d-link" class="d-link"> [ <a class="download" href="#" download="user-pass-ppp.rsc">user-pass-ppp.rsc</a> ]</span><br>
         </div>
       </div>
       <div class="footer">
