--- a/mikrotik-username-password-ppp-generator.html
+++ b/mikrotik-username-password-ppp-generator.html
@@ -194,7 +194,7 @@
           </div>
           <br>
           <button style="margin-top:0px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button>
-          <span style="margin-bottom:15px; margin-top:0px;padding-left:7px; font-weight:600; font-size:14px" id="d-link" class="d-link"> [ <a class="download" href="#" download="user-pass-ppp.rsc">user-pass-ppp.rsc</a> ]</span><br>
+          <span style="margin-bottom:15px; margin-top:0px;padding-left:7px; font-weight:600; font-size:14px" id="d-link" class="d-link"> { <a class="download" href="#" download="user-pass-ppp.rsc">user-pass-ppp.rsc</a> }</span><br>
         </div>
       </div>
       <div class="footer">
