--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <p><a target="_blank"  href="https://buananetpbun.github.io/policy-based-routing-website.html">Website Static Routing</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
           </div>
           <div class="column">
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-forward-generator.html">Port Forwarding</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-forward-generator.html">Port Forwarding width NAT</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-static-routing.html">Port TCP/UDP Static Routing</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-tunnel-all-traffic-script-generator.html">All Traffic to VPN Tunnel</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/remote-ip-public-static.html">Remote Access Public IP</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
