--- a/mikrotik-port-forward-generator.html
+++ b/mikrotik-port-forward-generator.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MikroTik Port Forwarding Script Generator - BuanaNETPBun.Github.io</title>
+    <title>MikroTik Port Forwarding With NAT Script Generator - BuanaNETPBun.Github.io</title>
     <meta content='MikroTik Port Forward (forwarding) Script Generator for RouterOS - BuanaNETPBun.Github.io' name='description'>
     <meta content='block, webside, dns, doh, DNS over HTTPS, burst, calculator, load balancing, pcc,LB, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
@@ -20,7 +20,7 @@
     <style>
       /* -----------------------------------------------
       ##################################################
-      # MikroTik Port Forwarding Script Generator
+      # MikroTik Port Forwarding with NAT Generator
       # Designer  : Agus Ramadhani / BuanaNET.Pbun
       # Github    : https://buananetpbun.github.io
       # Site      : http://www.o-om.com
@@ -142,7 +142,7 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1>MIKROTIK <span style="color:#ff6600">PORT FORWARDING</span> SCRIPT GENERATOR FOR ROUTEROS</h1>
+        <h1>MIKROTIK <span style="color:#ff6600">PORT FORWARDING</span> WITH <span style="color:#ff6600">NAT</span> SCRIPT GENERATOR</h1>
       </div>
       <div class="sidebar">
         <div class="list-output-content" style="margin-bottom:0px">
