--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <p><a target="_blank"  href="https://buananetpbun.github.io/policy-based-routing-website.html">Website Static Routing</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
           </div>
           <div class="column">
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-forward-generator.html">Port Forwarding width NAT</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-forward-generator.html">Port Forwarding with NAT</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-static-routing.html">Port TCP/UDP Static Routing</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-tunnel-all-traffic-script-generator.html">All Traffic to VPN Tunnel</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/remote-ip-public-static.html">Remote Access Public IP</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
@@ -267,7 +267,7 @@
         <div class="row">
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-qr-code-generator.html">Free Hotspot Wi-Fi QR Code Template</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-sharing-hotspot.html">Block Sharing Hotspot with Change TTL</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-sharing-hotspot.html">Block Sharing Hotspot with 'Change TTL'</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hotspot-wizard.html">Easy Hotspot Configuration Wizard</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-username-password-ppp-generator.html">PPP / PPPoE Username Password Generator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>			
           </div>
