--- a/policy-based-routing-website.html
+++ b/policy-based-routing-website.html
@@ -58,7 +58,7 @@
       .list-output-content{height:auto;min-height:300px;background:#f9f9f9;overflow:auto;overflow-x:auto;width:100%;padding:4px;margin-top:10px;border:1px solid #bbb;border-radius:5px;white-space:nowrap;font-size:14px}
       table,tr,td{border:none}
       table{border-collapse:collapse;width:100%}
-      td,th{border:1px solid #ccc;text-align:left;padding:6px;font-weight:600}
+      td,th{border:1px solid #ccc;text-align:left;padding:6px;font-weight:normal; font-size:14px}
       th{font-weight:700;background:#ddd;text-align:center}
       .myImage{padding:0;margin:0}
       .mikrotik-logo{display:none}
