--- a/mikrotik-block-website-generator.html
+++ b/mikrotik-block-website-generator.html
@@ -165,11 +165,11 @@
           </div>
           <div style="width:100%;margin-right:10px">
             <label>First Regexp</label>
-            <input  type="text" id="first-regexp" style='color: green; ' placeholder="" value="(\.|^)">
+            <input  type="text" id="first-regexp" style='color:#f60; ' placeholder="" value="(\.|^)">
           </div>
           <div style="width:100%;">
             <label>Last Regexp</label>
-            <input  type="text" id="last-regexp" style='color: green;' placeholder="" value="$">
+            <input  type="text" id="last-regexp" style='color:#f60;' placeholder="" value="$">
           </div>
         </div>
         <div class="list-output-content">
