--- a/remote-ip-public-static.html
+++ b/remote-ip-public-static.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Remote IP Public Static For Secondary Gateway Mikrotik - BuanaNETPBun.Github.io</title>
+    <title> Open Remote Access Public IP Static For Mikrotik - BuanaNETPBun.Github.io</title>
     <meta content='Remote IP Public Static For Secondary Gateway Mikrotik - BuanaNETPBun.Github.io' name='description'>
     <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
@@ -20,7 +20,7 @@
     <style>
       /* -----------------------------------------------------
       ########################################################
-      # Remote IP Public Static For Secondary Gateway Mikrotik
+      # Open Remote Access Public IP Static For Mikrotik
       # Designer  : Agus Ramadhani / BuanaNET
       # Github    : https://buananetpbun.github.io
       # Site      : http://www.o-om.com
@@ -135,7 +135,7 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1>REMOTE <span style="color:#ff6600">IP PUBLIC STATIC</span> FOR <span style="color:#ff6600">SECONDARY GATEWAY</span> MIKROTIK</h1>
+        <h1>OPEN REMOTE ACCESS <span style="color:#ff6600">PUBLIC IP STATIC</span> FOR <span style="color:#ff6600"></span> MIKROTIK</h1>
       </div>
       <div class="sidebar">
         <div style="display:flex">
@@ -155,7 +155,7 @@
           <div id="showScript">
             <span style="color:#ff6600;">
             ########################################################<br>
-            # Remote IP Public Static For Secondary Gateway Mikrotik<br>
+            # Open Remote Access Public IP Static For Mikrotik<br>
             # Date/Time: <span id="tanggalwaktu"></span><br>
             # Created By: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
             ########################################################<br>
