--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-forward-generator.html">Port Forwarding with NAT</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-static-routing.html">Port TCP/UDP Static Routing</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-tunnel-all-traffic-script-generator.html">All Traffic to VPN Tunnel</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/remote-ip-public-static.html">Remote ISP "Public IP Static"</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/remote-ip-public-static.html">Remote Access ISP "Public IP Static"</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator.html">VPN Routing Port Games</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator2.html">VPN Routing IP Address Games</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
           </div>
