--- a/remote-ip-public-static.html
+++ b/remote-ip-public-static.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Remote ISP "IP Public Static" For MikroTik - BuanaNETPBun.Github.io</title>
+    <title>Remote Access ISP "IP Public Static" For MikroTik - BuanaNETPBun.Github.io</title>
     <meta content='Remote IP Public Static For Secondary Gateway Mikrotik - BuanaNETPBun.Github.io' name='description'>
     <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
@@ -20,7 +20,7 @@
     <style>
       /* -----------------------------------------------------
       ########################################################
-      # Remote ISP "IP Public Static" For MikroTik
+      # Remote Access ISP "IP Public Static" For MikroTik
       # Designer  : Agus Ramadhani / BuanaNET
       # Github    : https://buananetpbun.github.io
       # Site      : http://www.o-om.com
@@ -135,13 +135,13 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1>REMOTE ISP <span style="color:#ff6600">IP PUBLIC STATIC</span> FOR MIKROTIK</h1>
+        <h1>REMOTE ACCESS ISP <span style="color:#ff6600">"PUBLIC IP STATIC"</span> FOR MIKROTIK</h1>
       </div>
       <div class="sidebar">
         <div style="display:flex">
           <div style="width:100%;">
             <label>Interface WAN ISP</label><br>
-            <input type="text" id="input-interface-isp" value="ether2-Astinet" placeholder="ether2-Astinet" onkeyup="myFunction()" >
+            <input type="text" id="input-interface-isp" value="ether1-ISP" placeholder="ether1-ISP" onkeyup="myFunction()" >
           </div>
           <div style="width:100%;margin-left:10px">
             <label>IP Gateway WAN ISP</label><br>
@@ -155,7 +155,7 @@
           <div id="showScript">
             <span style="color:#ff6600;">
             ########################################################<br>
-            # Remote ISP "IP Public Static" For MikroTik<br>
+            # Remote Access ISP "IP Public Static" For MikroTik<br>
             # Date/Time: <span id="tanggalwaktu"></span><br>
             # Created By: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
             ########################################################<br>
@@ -163,7 +163,7 @@
             <div id="list-output">
               <b>/ip firewall mangle</b><br>
               add action=mark-connection chain=input in-interface="<span id="interface-isp" style="color:#ff6600">ether1-ISP</span>" new-connection-mark=ip-public passthrough=yes<br>
-              add action=mark-routing chain=output connection-mark=ip-public  new-routing-mark=ip-public passthrough=no<br>
+              add action=mark-routing chain=output connection-mark=ip-public new-routing-mark=ip-public passthrough=no<br>
               <b>/ip route</b><br>
               add check-gateway=ping gateway="<span id="ip-gateway" style="color:#ff6600">192.168.10.1</span>" routing-mark=ip-public<br>
             </div>
