--- a/remote-ip-public-static.html
+++ b/remote-ip-public-static.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Remote Access ISP "IP Public Static" For MikroTik - BuanaNETPBun.Github.io</title>
+    <title>Remote Access ISP "Public IP Static" For MikroTik - BuanaNETPBun.Github.io</title>
     <meta content='Remote IP Public Static For Secondary Gateway Mikrotik - BuanaNETPBun.Github.io' name='description'>
     <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
@@ -20,7 +20,7 @@
     <style>
       /* -----------------------------------------------------
       ########################################################
-      # Remote Access ISP "IP Public Static" For MikroTik
+      # Remote Access ISP "Public IP Static" For MikroTik
       # Designer  : Agus Ramadhani / BuanaNET
       # Github    : https://buananetpbun.github.io
       # Site      : http://www.o-om.com
@@ -154,7 +154,7 @@
           <div id="showScript">
             <span style="color:#ff6600;">
             ########################################################<br>
-            # Remote Access ISP "IP Public Static" For MikroTik<br>
+            # Remote Access ISP "Public IP Static" For MikroTik<br>
             # Date/Time: <span id="tanggalwaktu"></span><br>
             # Created By: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
             ########################################################<br>
