--- a/ecmp.html
+++ b/ecmp.html
@@ -318,6 +318,7 @@
         <br>/ip firewall nat remove [find comment="LB ECMP by buananetpbun.github.io"]
         <br>/ip route remove [find comment="LB ECMP by buananetpbun.github.io"]
         <br>/ip firewall mangle remove [find comment="LB ECMP by buananetpbun.github.io"]
+		<br>/ip firewall address-list remove [find comment="LB ECMP by buananetpbun.github.io"]
         <br>/routing table remove [find comment="LB ECMP by buananetpbun.github.io"]
         <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555;">
           © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">buananetpbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
